--- a/swaync/swaync/style.css
+++ b/swaync/swaync/style.css
@@ -1,3 +1,14 @@
+@keyframes gradientAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
 
 .testing {
   background-color: red;
@@ -6,13 +17,15 @@
 .control-center {
   background: alpha(@background, 0.6);
   border-radius: 24px;
+  background-image: linear-gradient(-45deg, #A8C4D9 0%, #9B7AD4 52%, #BD90CF 90%);
   border: 0px solid @foreground;
+  animation: gradientAnimation 1s ease infinite;
   margin: 2px;
   padding: 4px;
 }
 
 .control-center-list {
-  background: transparent;
+  background-image: linear-gradient(-45deg, #A8C4D9 0%, #9B7AD4 52%, #BD90CF 90%);
 }
 
 .control-center-list-placeholder {
@@ -34,7 +47,7 @@
 }
 .widget-title > button {
   font-size: initial;
-  color:@color7;
+  color:#353147;
   text-shadow: none;
   background: alpha(@background,0.0);
   border: 1px solid alpha(@color7,0.5);
@@ -42,7 +55,7 @@
   border-radius: 12px;
 }
 .widget-title > button:hover {
-  background: @color1;
+  background: #353147;
 }
 
 .widget-label {
@@ -209,7 +222,7 @@ trough slider:hover {
 }
 .widget-inhibitors > button {
   font-size: initial;
-  color: white;
+  color: #353147;
   text-shadow: none;
   background: @noti-bg;
   border: 1px solid @noti-border-color;
@@ -221,6 +234,11 @@ trough slider:hover {
 }
 .notification-row {
   outline: none;
+  border: none;
+  background-image: linear-gradient(-45deg, #A8C4D9 0%, #9B7AD4 52%, #BD90CF 90%);
+  border-radius: 20;
+  padding: 0px;
+  box-shadow: none;
 }
 
 .notification-row:focus,
@@ -463,4 +481,3 @@ trough slider:hover {
 .notification-group.collapsed:hover .notification-row:not(:only-child) .notification {
   background-color: alpha(@color13, 0.5); /* @noti-bg-hover-opaque */
 }
-
