--- a/waybar/waybar/style.css
+++ b/waybar/waybar/style.css
@@ -1,5 +1,15 @@
 @import "mocha.css";
-
+@keyframes gradientAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
 * {
   font-family: FantasqueSansMono Nerd Font;
   font-size: 17px;
@@ -30,6 +40,7 @@
   margin-left: 0rem;
   padding: 2px 10px 0px 10px;
   background-image: linear-gradient(-45deg, #A8C4D9 0%, #9B7AD4 52%, #BD90CF 90%);
+  animation: gradientAnimation 1s ease infinite;  
 }
 #workspaces {
   border-radius: 1rem;
