--- a/waybar/waybar/style.css
+++ b/waybar/waybar/style.css
@@ -1,15 +1,4 @@
 @import "mocha.css";
-@keyframes gradientAnimation {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
-}
 * {
   font-family: FantasqueSansMono Nerd Font;
   font-size: 17px;
@@ -22,7 +11,6 @@
   margin: 5px 5px;
 }
 #window {
-  border-radius: 1rem;
   margin: 5px;
   font-weight: bold;
   color: #F5DDF2;
@@ -30,6 +18,11 @@
   margin-left: 0rem;
   padding: 2px 10px 0px 10px;
   background-image: linear-gradient(-45deg, #A8C4D9 0%, #9B7AD4 52%, #BD90CF 90%);
+border-top-left-radius: 1rem;
+border-top-right-radius: 1rem;
+border-bottom-right-radius: 1rem;
+border-bottom-left-radius: 1rem;
+  
 }
 #mpris {
   border-radius: 1rem;
@@ -38,7 +31,7 @@
   color: #F5DDF2;
   background-color: @surface0;
   margin-left: 0rem;
-  padding: 2px 10px 0px 10px;
+  padding: 2px 7px 0px 10px;
   background-image: linear-gradient(-45deg, #A8C4D9 0%, #9B7AD4 52%, #BD90CF 90%);
   animation: gradientAnimation 1s ease infinite;  
 }
