Synced config files automatically using shell script

--- a/waybar/waybar/style.css
+++ b/waybar/waybar/style.css
@@ -121,21 +121,18 @@ margin-right: 0.5rem;
   color: @red;
   margin-right: 1rem;
 }
-#custom-music {
+#custom-music.Playing {
     background: rgb(137, 180, 250);
-    background-image: linear-gradient(-45deg, #A8C4D9 0%, #9B7AD4 52%, #BD90CF 90%);
+    background: radial-gradient(circle, rgba(137, 180, 250, 120) 0%, rgba(142, 179, 250, 120) 6%, rgba(148, 226, 213, 1) 14%, rgba(147, 178, 250, 1) 14%, rgba(155, 176, 249, 1) 18%, rgba(245, 194, 231, 1) 28%, rgba(158, 175, 249, 1) 28%, rgba(181, 170, 248, 1) 58%, rgba(205, 214, 244, 1) 69%, rgba(186, 169, 248, 1) 69%, rgba(195, 167, 247, 1) 72%, rgba(137, 220, 235, 1) 73%, rgba(198, 167, 247, 1) 78%, rgba(203, 166, 247, 1) 100%);
     background-size: 400% 400%;
     animation: gradient_f 9s cubic-bezier(.72, .39, .21, 1) infinite;
     text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.377);
     font-weight: bold;
     color: #fff;
-    border-top-left-radius: 1rem;
-border-top-right-radius: 1rem;
-border-bottom-right-radius: 1rem;
-border-bottom-left-radius: 1rem;
 }
 
 #custom-music.Paused,
 #custom-music.Stopped {
-    background: #161925;
+background-image: linear-gradient(-45deg, #A8C4D9 0%, #9B7AD4 52%, #BD90CF 90%);
+
 }
