--- a/waybar/waybar/style.css
+++ b/waybar/waybar/style.css
@@ -129,10 +129,18 @@ margin-right: 0.5rem;
     text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.377);
     font-weight: bold;
     color: #fff;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
 }
 
 #custom-music.Paused,
 #custom-music.Stopped {
 background-image: linear-gradient(-45deg, #A8C4D9 0%, #9B7AD4 52%, #BD90CF 90%);
-
+color: #F5DDF2;
+border-top-left-radius: 1rem;
+border-top-right-radius: 1rem;
+border-bottom-right-radius: 1rem;
+border-bottom-left-radius: 1rem;
 }
