Synced config files automatically using shell script

--- a/waybar/waybar/style.css
+++ b/waybar/waybar/style.css
@@ -120,7 +120,7 @@ margin-right: 0.5rem;
   font-family: "NotoSansMono Nerd Font";
   color: @red;
   margin-right: 1rem;
-},
+}
 #custom-music.Playing {
     background: rgb(137, 180, 250);
     background: radial-gradient(circle, rgba(137, 180, 250, 120) 0%, rgba(142, 179, 250, 120) 6%, rgba(148, 226, 213, 1) 14%, rgba(147, 178, 250, 1) 14%, rgba(155, 176, 249, 1) 18%, rgba(245, 194, 231, 1) 28%, rgba(158, 175, 249, 1) 28%, rgba(181, 170, 248, 1) 58%, rgba(205, 214, 244, 1) 69%, rgba(186, 169, 248, 1) 69%, rgba(195, 167, 247, 1) 72%, rgba(137, 220, 235, 1) 73%, rgba(198, 167, 247, 1) 78%, rgba(203, 166, 247, 1) 100%);
