--- a/ags/scss/style/menus/media.scss
+++ b/ags/scss/style/menus/media.scss
@@ -1,6 +1,6 @@
 .menu-items.media {
     background: if($bar-menus-monochrome, $bar-menus-background, $bar-menus-menu-media-background-color);
-    border-color: transparent;
+    border-color: if($bar-menus-monochrome, $bar-menus-border-color, $bar-menus-menu-media-border-color);
     opacity: $bar-menus-opacity * 0.01;
 }
 
@@ -9,7 +9,7 @@
         font-size: $font-size * $bar-menus-menu-media-scaling * 0.01;
     }
 
-    min-width: 10em * $bar-menus-menu-media-scaling * 0.01;
+    min-width: 23em * $bar-menus-menu-media-scaling * 0.01;
     min-height: 10em * $bar-menus-menu-media-scaling * 0.01;
 
     .menu-section-container {
