--- a/waybar/waybar/style.css
+++ b/waybar/waybar/style.css
@@ -17,12 +17,10 @@
   background-color: @surface0;
   margin-left: 0rem;
   padding: 2px 10px 0px 10px;
-  background-image: linear-gradient(-45deg, #A8C4D9 0%, #9B7AD4 52%, #BD90CF 90%);
 border-top-left-radius: 1rem;
 border-top-right-radius: 1rem;
 border-bottom-right-radius: 1rem;
 border-bottom-left-radius: 1rem;
-  
 }
 
 #workspaces {
@@ -31,7 +29,6 @@ border-bottom-left-radius: 1rem;
   background-color: @surface0;
   margin-left: 0.5rem;
   padding: 2px 10px 0px 10px;
-  background-image: linear-gradient(-45deg, #A8C4D9 0%, #9B7AD4 52%, #BD90CF 90%);
 }
 
 #workspaces button {
@@ -43,6 +40,10 @@ border-bottom-left-radius: 1rem;
 #workspaces button.active {
   color: @green;
   border-radius: 1rem;
+  border: 2px;
+  border-color: @pink;
+  background-color: @pink;
+
 }
 
 #workspaces button:hover {
